--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
                                     <a href="#support">ПОДДЕРЖКА DRUPAL</a>
                                 </li>
                                 <li>
-                                    <a href="#block-tariffs">АДМИНИСТРИРОВАНИЕ</a>
+                                    <div class="dropdown-menu" style="width:300px" aria-labelledby="navbarDropdown">
+                                        <div class="container container-sm">
+                                            <div class="row">
+                                                <a href="#block-tariffs">АДМИНИСТРИРОВАНИЕ</a>
+                                                <div class="col-sm-4">
+                                                    <a class="dropdown-item" href="#">Test Test Test</a>
+                                                    <a class="dropdown-item" href="#">Test Test</a>
+                                                    <a class="dropdown-item" href="#">Test</a>
+                                                </div>
+                                            </div>
                                 </li>
                                 <li>
                                     <a href="#cases">ПРОДВИЖЕНИЕ</a>
@@ -54,18 +63,18 @@
                                 </li>
                             </ul>
                         </nav>
-                    </div>
-                </div>
+                        </div>
+                        </div>
 
 
-                <!-- ЭТО КНОПКА ДЛЯ МОБИЛЬНОЙ ВЕРСИИ (НАВИГАЦИЯ) -->
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <!-- ЭТО КНОПКА ДЛЯ МОБИЛЬНОЙ ВЕРСИИ (НАВИГАЦИЯ) -->
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Навигация</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-            </div>
+                    </div>
         </header>
 
         <!-- Задний фон + ачивменты + основной текст + кнопка "Тарифы" -->
@@ -1253,14 +1262,14 @@
                 </div>
             </footer>
         </div>
-    </div>
+        </div>
 
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="//cdn.jsdelivr.net/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="js/slick.js"></script>
-    <script src="js/history.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="//cdn.jsdelivr.net/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <script src="js/slick.js"></script>
+        <script src="js/history.js"></script>
 </body>
 
 </html>
