--- a/index.html
+++ b/index.html
@@ -35,16 +35,23 @@
                                     <a href="#support">ПОДДЕРЖКА DRUPAL</a>
                                 </li>
                                 <li>
-                                    <div class="dropdown-menu" style="width:300px" aria-labelledby="navbarDropdown">
-                                        <div class="container container-sm">
-                                            <div class="row">
+                                    <div id="vipad">
+                                        <ul class="menu">
+                                            <li class="menu-item">
                                                 <a href="#block-tariffs">АДМИНИСТРИРОВАНИЕ</a>
-                                                <div class="col-sm-4">
-                                                    <a class="dropdown-item" href="#">Test Test Test</a>
-                                                    <a class="dropdown-item" href="#">Test Test</a>
-                                                    <a class="dropdown-item" href="#">Test</a>
-                                                </div>
-                                            </div>
+                                                <ul class="sub-menu">
+                                                    <li>
+                                                        <a href="#">Подпункт меню 1</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="#">Подпункт меню 2</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="#">Подпункт меню 3</a>
+                                                    </li>>
+                                                </ul>
+                                            </li>
+                                    </div>
                                 </li>
                                 <li>
                                     <a href="#cases">ПРОДВИЖЕНИЕ</a>
@@ -61,20 +68,20 @@
                                 <li>
                                     <a href="#contacts">КОНТАКТЫ</a>
                                 </li>
-                            </ul>
+                                </ul>
                         </nav>
-                        </div>
-                        </div>
+                    </div>
+                </div>
 
 
-                        <!-- ЭТО КНОПКА ДЛЯ МОБИЛЬНОЙ ВЕРСИИ (НАВИГАЦИЯ) -->
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <!-- ЭТО КНОПКА ДЛЯ МОБИЛЬНОЙ ВЕРСИИ (НАВИГАЦИЯ) -->
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Навигация</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                    </div>
+            </div>
         </header>
 
         <!-- Задний фон + ачивменты + основной текст + кнопка "Тарифы" -->
@@ -1262,14 +1269,14 @@
                 </div>
             </footer>
         </div>
-        </div>
+    </div>
 
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="//cdn.jsdelivr.net/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-        <script src="js/slick.js"></script>
-        <script src="js/history.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="js/slick.js"></script>
+    <script src="js/history.js"></script>
 </body>
 
 </html>
