--- a/index.html
+++ b/index.html
@@ -1277,6 +1277,7 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/slick.js"></script>
     <script src="js/history.js"></script>
+    <script src="js/vipad.js"></script>
 </body>
 
 </html>
