--- a/index.html
+++ b/index.html
@@ -1277,7 +1277,33 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/slick.js"></script>
     <script src="js/history.js"></script>
-    <script src="js/vipad.js"></script>
+    <script>
+        var el = document.getElementsByClassName('menu-item');
+        for (var i = 0; i < el.length; i++) {
+            el[i].addEventListener("mouseenter", showSub, false);
+            el[i].addEventListener("mouseleave", hideSub, false);
+        }
+
+        function showSub(e) {
+            if (this.children.length > 1) {
+                this.children[1].style.height = "auto";
+                this.children[1].style.overflow = "visible";
+                this.children[1].style.opacity = "1";
+            } else {
+                return false;
+            }
+        }
+
+        function hideSub(e) {
+            if (this.children.length > 1) {
+                this.children[1].style.height = "0px";
+                this.children[1].style.overflow = "hidden";
+                this.children[1].style.opacity = "0";
+            } else {
+                return false;
+            }
+        }
+    </script>
 </body>
 
 </html>
