--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                     <a href="#support">ПОДДЕРЖКА DRUPAL</a>
                                 </li>
                                 <li>
-                                    <div id="vipad">
+                                    <div class="col-md" id="vipad">
                                         <ul class="menu">
                                             <li class="menu-item">
                                                 <a href="#block-tariffs">АДМИНИСТРИРОВАНИЕ</a>
