--- a/index.html
+++ b/index.html
@@ -35,21 +35,25 @@
                                     <a href="#support">ПОДДЕРЖКА DRUPAL</a>
                                 </li>
                                 <li>
-                                    <div class="col-md" id="vipad">
+                                    <div class="container" id="vipad">
                                         <ul class="menu">
                                             <li class="menu-item">
                                                 <a href="#block-tariffs">АДМИНИСТРИРОВАНИЕ</a>
-                                                <ul class="sub-menu">
-                                                    <li>
-                                                        <a href="#">Подпункт меню 1</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Подпункт меню 2</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Подпункт меню 3</a>
-                                                    </li>>
-                                                </ul>
+                                                <div class="row">
+                                                    <div class="col-12">
+                                                        <ul class="sub-menu">
+                                                            <li>
+                                                                <a href="#">Подпункт меню 1</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#">Подпункт меню 2</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#">Подпункт меню 3</a>
+                                                            </li>>
+                                                        </ul>
+                                                    </div>
+                                                </div>
                                             </li>
                                     </div>
                                 </li>
@@ -1028,8 +1032,7 @@
                 </div>
             </section>
 
-            <!-- Блок с нами работают -->
-            <!-- Требует доработку!!!! -->
+
             <section class="views-element-container block block-views block-views-blockour-clients-block-1" id="block-views-block-our-clients">
                 <h2 class="block-title">С нами работают</h2>
                 <div class="form-group">
@@ -1213,7 +1216,7 @@
                                             <div class="block-form-contacts">
                                                 <ul>
                                                     <li class="block-form-phone"><a href="tel:88002222673">8 800
-                                                            222-26-73</a></li>
+                                                            555-35-35</a></li>
                                                     <li class="block-form-email"><a href="mailto:info@drupal-coder.ru">info@drupal-coder.ru</a></li>
                                                 </ul>
                                             </div>
