--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
                         <!-- соотыетственно самаааа навигация  -->
                         <nav role="navigation" class="collapse navbar-collapse">
                             <ul class="menu nav navbar-nav">
-                                <li>
-                                    <a href="#support">ПОДДЕРЖКА DRUPAL</a>
-                                </li>
-                                <li>
+                                <div class="row">
+                                    <div class="col-md-1">
 
-                                    <ul class="menu">
-                                        <div class="container" id="vipad">
-                                            <li class="menu-item">
-                                                <a href="#block-tariffs">АДМИНИСТРИРОВАНИЕ</a>
-                                                <div class="row">
-                                                    <div class="col-6">
+                                        <li>
+                                            <a href="#support">ПОДДЕРЖКА DRUPAL</a>
+                                        </li>
+                                    </div>
+                                    <div class="col-md-1">
+                                        <li>
+                                            <div id="vipad">
+                                                <ul class="menu">
+                                                    <li class="menu-item">
+                                                        <a href="#block-tariffs">АДМИНИСТРИРОВАНИЕ</a>
                                                         <ul class="sub-menu">
                                                             <li>
                                                                 <a href="#">Подпункт меню 1</a>
@@ -53,27 +55,37 @@
                                                                 <a href="#">Подпункт меню 3</a>
                                                             </li>>
                                                         </ul>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        </div>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#cases">ПРОДВИЖЕНИЕ</a>
-                                </li>
-                                <li>
-                                    <a href="">РЕКЛАМА</a>
-                                </li>
-                                <li>
-                                    <a href="#reviews">О НАС</a>
-                                </li>
-                                <li>
-                                    <a href="#reviews">ПРОЕКТЫ</a>
-                                </li>
-                                <li>
-                                    <a href="#contacts">КОНТАКТЫ</a>
-                                </li>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                    </div>
+                                    <div class="col-md-1">
+                                        <li>
+                                            <a href="#cases">ПРОДВИЖЕНИЕ</a>
+                                        </li>
+                                    </div>
+                                    <div class="col-md-1">
+                                        <li>
+                                            <a href="">РЕКЛАМА</a>
+                                        </li>
+                                    </div>
+                                    <div class="col-md-1">
+                                        <li>
+                                            <a href="#reviews">О НАС</a>
+                                        </li>
+                                    </div>
+                                    <div class="col-md-1">
+                                        <li>
+                                            <a href="#reviews">ПРОЕКТЫ</a>
+                                        </li>
+                                    </div>
+                                    <div class="col-md-1">
+                                        <li>
+                                            <a href="#contacts">КОНТАКТЫ</a>
+                                        </li>
+                                    </div>
+                                </div>
                             </ul>
                         </nav>
                     </div>
