--- a/index.html
+++ b/index.html
@@ -24,97 +24,42 @@
                         </a>
                     </div>
                 </div>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown link
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
 
                 <!-- Это начало менюшечкииииии -->
                 <div class="navbar-collapse-wrapper">
                     <div class="navbar-collapse collapse">
                         <!-- соотыетственно самаааа навигация  -->
                         <nav role="navigation" class="collapse navbar-collapse">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                              </button>
                             <ul class="menu nav navbar-nav">
-                                <div class="row">
-                                    <div class="col-md-1">
-
-                                        <li>
-                                            <a href="#support">ПОДДЕРЖКА DRUPAL</a>
-                                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#support">ПОДДЕРЖКА DRUPAL</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#block-tariffs" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">АДМИНИСТРИРОВАНИЕ</a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="#">Something else here</a>
                                     </div>
-                                    <div class="col-md-1">
-                                        <li>
-                                            <div id="vipad">
-                                                <ul class="menu">
-                                                    <li class="menu-item">
-                                                        <a href="#block-tariffs">АДМИНИСТРИРОВАНИЕ</a>
-                                                        <ul class="sub-menu">
-                                                            <li>
-                                                                <a href="#">Подпункт меню 1</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="#">Подпункт меню 2</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="#">Подпункт меню 3</a>
-                                                            </li>>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <li>
-                                            <a href="#cases">ПРОДВИЖЕНИЕ</a>
-                                        </li>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <li>
-                                            <a href="">РЕКЛАМА</a>
-                                        </li>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <li>
-                                            <a href="#reviews">О НАС</a>
-                                        </li>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <li>
-                                            <a href="#reviews">ПРОЕКТЫ</a>
-                                        </li>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <li>
-                                            <a href="#contacts">КОНТАКТЫ</a>
-                                        </li>
-                                    </div>
-                                </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#cases">ПРОДВИЖЕНИЕ</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="">РЕКЛАМА</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#reviews">О НАС</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#reviews">ПРОЕКТЫ</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#contacts">КОНТАКТЫ</a>
+                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -1075,7 +1020,8 @@
                 </div>
             </section>
 
-
+            <!-- Блок с нами работают -->
+            <!-- Требует доработку!!!! -->
             <section class="views-element-container block block-views block-views-blockour-clients-block-1" id="block-views-block-our-clients">
                 <h2 class="block-title">С нами работают</h2>
                 <div class="form-group">
@@ -1259,7 +1205,7 @@
                                             <div class="block-form-contacts">
                                                 <ul>
                                                     <li class="block-form-phone"><a href="tel:88002222673">8 800
-                                                            555-35-35</a></li>
+                                                            222-26-73</a></li>
                                                     <li class="block-form-email"><a href="mailto:info@drupal-coder.ru">info@drupal-coder.ru</a></li>
                                                 </ul>
                                             </div>
@@ -1323,33 +1269,6 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/slick.js"></script>
     <script src="js/history.js"></script>
-    <script>
-        var el = document.getElementsByClassName('menu-item');
-        for (var i = 0; i < el.length; i++) {
-            el[i].addEventListener("mouseenter", showSub, false);
-            el[i].addEventListener("mouseleave", hideSub, false);
-        }
-
-        function showSub(e) {
-            if (this.children.length > 1) {
-                this.children[1].style.height = "auto";
-                this.children[1].style.overflow = "visible";
-                this.children[1].style.opacity = "1";
-            } else {
-                return false;
-            }
-        }
-
-        function hideSub(e) {
-            if (this.children.length > 1) {
-                this.children[1].style.height = "0px";
-                this.children[1].style.overflow = "hidden";
-                this.children[1].style.opacity = "0";
-            } else {
-                return false;
-            }
-        }
-    </script>
 </body>
 
 </html>
