--- a/index.html
+++ b/index.html
@@ -26,44 +26,45 @@
                 </div>
 
                 <!-- Это начало менюшечкииииии -->
-                <div class="navbar-collapse-wrapper">
-                    <div class="navbar-collapse collapse">
-                        <!-- соотыетственно самаааа навигация  -->
-                        <nav role="navigation" class="collapse navbar-collapse">
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+
+                <!-- соотыетственно самаааа навигация  -->
+                <nav role="navigation" class="navbar navbar-expand-lg navbar-light bg-light">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                               </button>
-                            <ul class="menu nav navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#support">ПОДДЕРЖКА DRUPAL</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#block-tariffs" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">АДМИНИСТРИРОВАНИЕ</a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                    </div>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#cases">ПРОДВИЖЕНИЕ</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">РЕКЛАМА</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#reviews">О НАС</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#reviews">ПРОЕКТЫ</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#contacts">КОНТАКТЫ</a>
-                                </li>
-                            </ul>
-                        </nav>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#support">ПОДДЕРЖКА DRUPAL</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#block-tariffs" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">АДМИНИСТРИРОВАНИЕ</a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#cases">ПРОДВИЖЕНИЕ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="">РЕКЛАМА</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#reviews">О НАС</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#reviews">ПРОЕКТЫ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contacts">КОНТАКТЫ</a>
+                            </li>
+                        </ul>
                     </div>
-                </div>
+                </nav>
+
+
 
 
                 <!-- ЭТО КНОПКА ДЛЯ МОБИЛЬНОЙ ВЕРСИИ (НАВИГАЦИЯ) -->
