--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                                 </li>
                                 <li>
                                     <div class="dropdown">
-                                        <button class="dropdown-toggle" data-toggle="dropdown"><a href="#block-tariffs">АДМИНИСТРИРОВАНИЕ</a></button>
-                                        <ul class="dropdown-menu">
-                                            <li>
+                                        <a class="nav-link dropdown-toggle" href="#block-tariffs" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">АДМИНИСТРИРОВАНИЕ<span class="caret"></span></a>
+                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                            <li class="dropdown-item">
                                                 <a href="#">МИГРАЦИЯ</a>
                                             </li>
-                                            <li><a href="#">БЭКАПЫ</a></li>
-                                            <li><a href="#">АУДИТ БЕЗОПАСНОСТИ</a></li>
+                                            <li class="dropdown-item"><a href="#">БЭКАПЫ</a></li>
+                                            <li class="dropdown-item"><a href="#">АУДИТ БЕЗОПАСНОСТИ</a></li>
                                         </ul>
                                     </div>
                                 </li>
