--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                                     <div class="dropdown">
                                         <a class="nav-link dropdown-toggle" href="#block-tariffs" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">АДМИНИСТРИРОВАНИЕ<span class="caret"></span></a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                            <li class="dropdown-item">
+                                            <li>
                                                 <a href="#">МИГРАЦИЯ</a>
                                             </li>
-                                            <li class="dropdown-item"><a href="#">БЭКАПЫ</a></li>
-                                            <li class="dropdown-item"><a href="#">АУДИТ БЕЗОПАСНОСТИ</a></li>
+                                            <li><a href="#">БЭКАПЫ</a></li>
+                                            <li><a href="#">АУДИТ БЕЗОПАСНОСТИ</a></li>
                                         </ul>
                                     </div>
                                 </li>
