--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                                 </li>
                                 <li>
                                     <div class="dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#block-tariffs" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">АДМИНИСТРИРОВАНИЕ<span class="caret"></span></a>
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <button class="dropdown-toggle" data-toggle="dropdown"><a href="#block-tariffs">АДМИНИСТРИРОВАНИЕ</a>
+                                        <span class="caret"></span>
+                                    </button>
+                                        <ul class="dropdown-menu">
                                             <li>
                                                 <a href="#">МИГРАЦИЯ</a>
                                             </li>
